--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <body>
 
     <main>
-        
+        <a href="./01-product-preview-card/index.html">1. Product Preview Card Component</a>
+        <a href="./02-interactive-rating-component/index.html">2. Interactive Rating Component</a>
+        <a href="./03-qr-code-component/index.html">3. QR Code Component</a>
     </main>
     
 </body>
